<resources>
    <string name="app_name">WhatsNow</string>
    <string name="app_version">v1.0</string>
    <string name="developer_message">Developed with ❤️ By Arnab Maji</string>
    <string name="dedication_message">Dedicated to my Grandma\n(1934 &#8211; 2019)</string>
    <string name="support_message">Any suggestions, any queries\nfeel free to contact!\n\nE-mail @</string>
    <string name="support_email">cyberminds19@outlook.com</string>
    <string name="donation_message">Appreciate this work?\nDonate via PayPal!</string>

    <string name="dashboard">Dashboard</string>
    <string name="today_schedule">Today\'s Schedule</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="drawer_image">Drawer Image</string>
    <string name="support">Support</string>
    <string name="ongoing_lecture">Ongoing Lecture</string>
    <string name="upcoming_lecture">Upcoming Lecture</string>
    <string name="next_lecture">Next Lecture</string>
    <string name="lecture_number"> </string>
    <string name="room">Room:</string>
    <string name="course_name"> </string>
    <string name="faculty_name">Nothing for Now</string>
    <string name="off_day">It\'s Off day!</string>
    <string name="lecture_room"> </string>
    <string name="lecture_duration"> </string>
    <string name="connection_error">Oops!\nInternet Connection Not Available!</string>
    <string name="try_again">Try Again!</string>
    <string name="load_text">Looking up in the database!</string>
    <string name="select_schedule">Select your preferred schedule:</string>
    <string name="department">Department:</string>
    <string name="section">Section:</string>
    <string name="batch">Batch:</string>
    <string name="semester">Semester:</string>
    <string name="last_updated">Last Updated:</string>
    <string name="setup_message">Setting up your schedule…</string>
    <string name="success_message">Successful!\nPlease restart app</string>
    <string name="exit">Exit</string>
    <string name="schedule_icon">Schedule Icon</string>
    <string name="setup">Setup</string>
    <string name="sync">Synchronizing&#8230;</string>

    <!--Preference-->
    <string name="schedule_header">Schedule</string>
    <string name="sync_pref_key">sync_pref_key</string>
    <string name="sync_pref">Sync</string>
    <string name="sync_pref_summary">Synchronize your current Schedule</string>

    <string name="change_pref_key">change_pref_key</string>
    <string name="change_pref">Change</string>
    <string name="change_pref_summary">Download another Schedule</string>

    <string name="view_current_pref_key">view_current_pref_key</string>
    <string name="view_current_pref">View Details</string>
    <string name="view_current_pref_summary">Display your current schedule details</string>

    <string name="linkedin">LinkedIn</string>
    <string name="github">Github</string>
    <string name="instagram">Instagram</string>
    <string name="social_links">Social Links</string>

</resources>
