<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/schedule_header">
        <Preference
            app:title="@string/sync_pref"
            app:summary="@string/sync_pref_summary"
            app:key="@string/sync_pref_key"
            app:icon="@drawable/ic_sync_black_24dp" />

        <Preference
            app:title="@string/change_pref"
            app:summary="@string/change_pref_summary"
            app:key="@string/change_pref_key"
            app:icon="@drawable/ic_get_app_black_24dp" />

        <Preference
            app:title="@string/view_current_pref"
            app:summary="@string/view_current_pref_summary"
            app:key="@string/view_current_pref_key"
            app:icon="@drawable/ic_schedule_black_24dp" />

    </PreferenceCategory>
</PreferenceScreen>